test/bad/classes/inheritance02.px

class A: XYZ def
    x: Int
